--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,30 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+html,
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  /* background-color: rgb(245, 245, 245); */
 }
 
 .App-link {
-  color: #61dafb;
+  color: whitesmoke;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.navbar {
+    background-color: #222;
+    }
+a, .navbar-brand, .navbar-nav, .nav-link.active {
+      color: #bbb;
+      text-decoration: none;
+      font-size: larger;
+      hover: yellow
+     
   }
-  to {
-    transform: rotate(360deg);
+  
+  .container {
+    margin: 80px auto 0 auto;
+    max-width: 1200px;
   }
-}
